--- a/src/components/home/views/AllView.scss
+++ b/src/components/home/views/AllView.scss
@@ -3,6 +3,6 @@
   justify-content: center;
   margin: auto;
   max-width: 800px;
-  height: 100%;
   padding: 10px;
+  flex-wrap: wrap;
 }
